@@ -1,3 +1,8 @@
+2010-01-25  gingold  <gingold@adacore.com>
+
+        * windows-nat.c (windows_continue): Use %x to print thread id.
+        (get_windows_debug_event): Ditto.
+
 2010-01-22  Tom Tromey  <tromey@redhat.com>
 
 	PR symtab/11199:
